# lr-studio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  architecture.md  architecture.txt  makefile  unsupported.md
.github/workflows/: format.yml  lint.yml  rust_ci.yml  test.yml
amf0/: Cargo.toml
amf0/src/: deserialization.rs  error.rs  errors.rs  lib.rs  serialization.rs
color/: Cargo.toml
color/src/: lib.rs  rgb_color.rs
crates/: Cargo.toml
crates/format-core/: Cargo.toml
crates/format-core/examples/: read-track.rs
crates/format-core/src/: lib.rs
crates/format-core/src/formats/: error.rs  json.rs
crates/format-core/src/formats/sol/amf0/: serialization.rs
crates/format-core/src/formats/trk/: reader.rs
crates/format-core/src/track/group_builder/: group_builder_base.rs  group_builder_macro.rs
crates/format-core/src/track/groups/line/: line_group.rs
crates/format-core/src/track/groups/trigger/: background_color_group.rs  triggered_event.rs
crates/format-core/src/util/: string_parser.rs
crates/physics/: Cargo.toml
fixtures/format/: lro_features.track.json  web_features.track.json
fixtures/format_json/: lro_features.track.json  web_features.track.json
fixtures/format_sol/: zero_start_line_props.sol
fixtures/format_trk/: lra_features.trk
fixtures/lr_format_json/: empty_layers.track.json  line_flags.track.json  lrl_features.track.json  lro_features.track.json  remount_versions.track.json
fixtures/lr_format_sol/: all_features.sol  multi_track_61.sol  no_grid_version.sol
fixtures/lr_format_trk/: lrace_features.trk
format_converter/: Cargo.toml  README.md
format_converter/src/: main.rs
format_core/: Cargo.toml  README.md
format_json/: Cargo.toml  json.md
format_json/src/: error.rs  lib.rs  reader.rs  serde_line_array.rs  writer.rs
format_json/tests/: fixtures.rs  metadata.rs  metadata_features.json  read.rs  round_trip_fuzz_tests.rs  round_trip_tests.rs  write.rs
format_sol/: Cargo.toml  sol.md
format_trk/: Cargo.toml  trk.md
format_trk/src/: error.rs  reader.rs
format_trk/tests/: fixtures.rs
formatter_extras/cli/: Cargo.toml
geometry/: Cargo.toml
lcg_random/: Cargo.toml
line-grid/: Cargo.toml
lr-formatter-rs/: README.md  makefile
lr_format_core/: Cargo.toml
lr_format_json/: Cargo.toml  README.md
lr_format_json/src/: error.rs  json_array_line.rs  lib.rs  reader.rs
lr_format_json/tests/: fixtures.rs
lr_format_sol/: Cargo.toml  README.md
lr_format_sol/src/: error.rs  lib.rs  reader.rs
lr_format_sol/tests/: fixtures.rs
lr_format_trk/: Cargo.toml  README.md
lr_format_trk/src/: error.rs  lib.rs  reader.rs
lr_format_trk/tests/: fixtures.rs
lr_physics_engine/: Cargo.toml  README.md
lr_physics_engine/benches/: main_bench.rs
lr_physics_engine/src/: default_rider.rs  engine.rs  entity.rs  entity_registry.rs  lib.rs  physics_line.rs
lr_physics_engine/src/engine/: entity_registry.rs  line_registry.rs  moment.rs  state.rs  view.rs
lr_physics_engine/src/engine/entity_registry/: initial_properties.rs  joint.rs  point.rs  remount_version.rs
lr_physics_engine/src/engine/entity_registry/bone/: builder.rs  entity.rs  template.rs
lr_physics_engine/src/engine/entity_registry/joint/: builder.rs  entity.rs  template.rs
lr_physics_engine/src/engine/entity_registry/point/: builder.rs  entity.rs  state.rs  template.rs
lr_physics_engine/src/engine/entity_registry/skeleton/: builder.rs  entity.rs  state.rs  template.rs
lr_physics_engine/src/entity/: mount_phase.rs  registry.rs  skeleton.rs
lr_physics_engine/src/entity/bone/: builder.rs  template.rs
lr_physics_engine/src/entity/joint/: builder.rs  entity.rs  template.rs
lr_physics_engine/src/entity/point/: builder.rs  entity.rs  state.rs  template.rs
lr_physics_engine/src/entity/skeleton/: builder.rs  entity.rs  initial_properties.rs  remount_version.rs  template.rs
lr_physics_engine/src/entity_registry/: bone.rs  entity.rs  entity_state.rs  entity_template.rs  joint.rs  mount_phase.rs  remount_version.rs
lr_physics_engine/src/entity_registry/entity_state/: point_state.rs
lr_physics_engine/src/line_registry/: physics_line.rs
lr_physics_engine/tests/: compatibility_fixtures.rs  fixtures.rs
lr_physics_grid/: Cargo.toml
lr_physics_grid/benches/: main_bench.rs
lr_physics_grid/src/: grid_cell.rs  grid_version.rs  lib.rs  line_grid.rs
lr_physics_grid/tests/: api.rs
lr_physics_line_store/: Cargo.toml
lr_studio/: Cargo.toml
lr_types/: Cargo.toml
notes/: architecture.md  unsupported.md
physics/: Cargo.toml  README.md  api_definitions.md
physics/benches/: main_bench.rs
physics/src/: engine.rs  entity.rs  grid.rs  lib.rs  premade.rs  remount_verison.rs
physics/src/engine/: builder.rs  defaults.rs  state.rs  version.rs
physics/src/entity/: mount_phase.rs  point.rs  registry.rs  skeleton.rs
physics/src/entity/bone/: builder.rs  entity.rs  snapshot.rs  state.rs  template.rs
physics/src/entity/joint/: entity.rs  snapshot.rs  state.rs  template.rs
physics/src/entity/point/: builder.rs  entity.rs  snapshot.rs  state.rs  template.rs
physics/src/entity/skeleton/: builder.rs  entity.rs  snapshot.rs  state.rs  template.rs
physics/src/grid/: grid_cell.rs  line_grid.rs
physics/src/line/: hitbox.rs
physics/src/premade/: acceleration_line.rs  default_rider.rs  normal_line.rs
physics/tests/: engine.rs  fixture_tests.json  fixtures.rs  grid_61_tests.json
physics/tests/fixtures/: accel_flags.track.json  bolted_to_the_wall.track.json  empty.track.json  fakie_park_autumn.track.json  grid_62.track.json  grid_testing.track.json  initial_state.track.json  line_flags.track.json  lra_dismount.track.json  lra_remount.track.json  lra_shoulder_fakie.track.json  lra_tail_fakie_remount.track.json  shuffle_sleds.track.json  ten_pc_spam.track.json  veil.track.json
spatial_grid/: Cargo.toml
spatial_grid/benches/: main_bench.rs
spatial_grid/src/: grid_cell.rs  grid_version.rs  lib.rs  line_grid.rs
spatial_grid/tests/: api.rs  grid_60_tests.json
track-converter/: README.md
vector2d/: Cargo.toml
(+214 files in other folders)
