[workspace]
members = [
  "vector2d",
  "geometry",
  "lr_format_core",
  "lr_format_json",
  "lr_format_trk",
  "lr_format_sol",
  "lr_physics_engine",
  "lr_physics_grid",
  "color",
  "amf0",
  "quick_byte",
]
resolver = "3"

# Opinionated, handpicked lints
# Feel free suggest revisions to this list
[workspace.lints.clippy]
allow_attributes = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
cfg_not_test = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
copy_iterator = "warn"
create_dir = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
elidable_lifetime_names = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
field_scoped_visibility_modifiers = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_collect = "warn"
format_push_string = "warn"
get_first = "allow"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
integer_division = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_over_hash_type = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
mod_module_files = "warn"
# Stylistic choice for naming exported items, similar to io::Error instead of io::IoError
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mut_mut = "warn"
negative_feature_names = "warn"
non_ascii_literal = "warn"
option_option = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
redundant_test_prefix = "warn"
ref_option = "warn"
ref_option_ref = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_outside_block = "warn"
tests_outside_test_module = "warn"
todo = "warn"
transmute_ptr_to_ptr = "warn"
try_err = "warn"
unchecked_time_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "warn"
# This used to be enabled, but it's unhelpful for when a function has both recoverable user errors and unrecoverable internal errors
# unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
