[package]
edition = "2024"
name = "format_converter"
version = "1.1.0"

[dependencies]
anyhow = "1.0.97"
clap = {version = "4.0", features = ["derive"]}
dialoguer = "0.11"
format_json = {path = "../format_json"}
format_sol = {path = "../format_sol"}
format_trk = {path = "../format_trk"}

[[bin]]
name = "format_converter"
path = "src/main.rs"
