[package]
edition = "2024"
name = "format_trk"
version = "0.1.0"

[dependencies]
byteorder = "1"
color = {path = "../color"}
format_core = {path = "../format_core"}
spatial_grid = {path = "../spatial_grid"}
thiserror = "2"
vector2d = {path = "../vector2d"}

[dev-dependencies]
pretty_assertions = "1"
