[package]
edition = "2024"
name = "lr_format_trk"
version = "0.1.0"

[dependencies]
color = {path = "../color"}
geometry = {path = "../geometry"}
lr_format_core = {path = "../lr_format_core"}
quick_byte = {path = "../quick_byte"}
vector2d = {path = "../vector2d"}

[dev-dependencies]
pretty_assertions = "1"
