[package]
edition = "2024"
name = "physics"
version = "0.1.0"

[dependencies]
geometry = {path = "../geometry"}
vector2d = {path = "../vector2d"}

[dev-dependencies]
format_core = {version = "0.1.0", path = "../format_core"}
format_json = {version = "0.1.0", path = "../format_json"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
