[package]
edition = "2024"
name = "physics"
version = "0.1.0"

[dependencies]
format_core = {path = "../format_core"}
geometry = {path = "../geometry"}
spatial_grid = {path = "../spatial_grid"}
vector2d = {path = "../vector2d"}

[dev-dependencies]
criterion = {version = "0.8.0", features = ["html_reports"]}
format_json = {path = "../format_json"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

# Criterion configuration
[[bench]]
harness = false
name = "main_bench"
