[package]
edition = "2024"
name = "spatial_grid"
version = "0.1.0"

[dependencies]
format_core = {path = "../format_core"}
geometry = {path = "../geometry"}
vector2d = {path = "../vector2d"}

[dev-dependencies]
criterion = {version = "0.8.0", features = ["html_reports"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

# Criterion configuration
[[bench]]
harness = false
name = "main_bench"
