[package]
name = "track-converter"
version = "1.1.0"
edition = "2024"
authors = ["Tobias Bessler"]
description = "CLI for converting Line Rider file formats"
license = "MIT"
repository = "https://github.com/Malizma/lr-formatter-rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.97"
format_core = { path = "../format_core" }
dialoguer = "0.11"

[[bin]]
name = "track-converter"
path = "src/main.rs"
